--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "twitter-story-project",
-  "author": "luisriancho_digitalia",
+  "author": "luigi_soplete",
   "keywords": [
     "gatsby"
   ],
@@ -15,25 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.2.1",
     "gatsby": "^5.5.0",
-    "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-google-gtag": "^5.6.0",
-    "gatsby-plugin-mdx": "^5.5.0",
-    "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sitemap": "^6.6.0",
     "gatsby-source-filesystem": "^5.5.0",
     "gatsby-transformer-remark": "^6.5.0",
-    "react": "^18.2.0",
-    "react-cookie-consent": "^8.0.1",
-    "react-dom": "^18.2.0",
-    "react-modal-images": "^0.1.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "gatsby-plugin-postcss": "^6.5.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
-    "web-vitals": "^3.1.1"
+    "react": "^18.2.0"
   }
 }
